fix: 删除无用的page添加video page以及一些小改动

--- a/src/app.json
+++ b/src/app.json
@@ -2,8 +2,8 @@
   "pages": [
     "pages/index/main",
     "pages/logs/main",
-    "pages/counter/main",
     "pages/login/main",
+    "pages/video/main",
     "pages/myLessons/main",
     "pages/chooseItem/main"
   ],
