--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "dayjs": "^1.7.7",
     "jwt-decode": "^2.2.0",
     "mp-weui": "^1.0.4",
     "mpvue": "^1.0.11",
